js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentFileWithCrossModuleInliner/lib2/l2.3.kt
inline fun qux() = foo0() + foo0_1()
